--- a/sources/frontend/static/css/sections/body.css
+++ b/sources/frontend/static/css/sections/body.css
@@ -81,3 +81,14 @@
 /*    margin-top: 5px;*/
 /*    margin-bottom: 5px;*/
 /*}*/
+
+
+/*DEPTH TAB*/
+.depth-options {
+    display: flex;
+    justify-content: left;
+}
+
+.depth-options .depth-options-label {
+    margin-right: 10px;
+}
